force-app/main/default/objects/cgcloud__Account_Receivable__c/cgcloud__Account_Receivable__c.object-meta.xml
<CustomObject>
    <description>Holds customer related information regarding invoices to be paid,debit and credit notes.</description>
    <label>Account Receivable</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Customer Receivable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Receivables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>