force-app/main/default/objects/cgcloud__Account_Receivable__c/fields/cgcloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount__c</fullName>
    <description>Original amount with which invoice/credit or debit note was raised. Credit note: Negative value</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>