force-app/main/default/objects/cgcloud__Account_Receivable__c/fields/cgcloud__Amount_Open__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount_Open__c</fullName>
    <description>Latest amount to be paid (calculated in ERP system based on payment transactions). Not applicable for credit notes.</description>
    <label>Amount Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>