force-app/main/default/objects/cgcloud__Account_Receivable__c/fields/cgcloud__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Document_Type__c</fullName>
    <description>Invoice or credit/debit note raised against an account.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>DebitNote</fullName>
            </value>
            <value>
                <fullName>CreditNote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>