force-app/main/default/objects/cgcloud__Account_Receivable__c/fields/cgcloud__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Due_Date__c</fullName>
    <description>Due date of invoice. Not applicable for credit notes.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>