force-app/main/default/objects/cgcloud__Account_Receivable__c/fields/cgcloud__External_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique reference number to track the invoice generated, debit/credit note generated.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>