force-app/main/default/objects/cgcloud__Account_Receivable__c/fields/cgcloud__Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Invoice_Status__c</fullName>
    <description>Consolidated status set in ERP system based on account receivable transactions. Not applicable for credit notes.</description>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UnPaid</fullName>
            </value>
            <value>
                <fullName>PartiallyPaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>