force-app/main/default/objects/cgcloud__Account_Receivable__c/fields/cgcloud__Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Receipt_Date__c</fullName>
    <description>Date on which invoice, credit or debit note was generated.</description>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>