force-app/main/default/objects/cgcloud__Account_Receivable__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Receipt_Date__c</columns>
    <columns>cgcloud__Amount__c</columns>
    <columns>cgcloud__Invoice_Status__c</columns>
    <columns>cgcloud__External_Id__c</columns>
    <columns>cgcloud__Document_Type__c</columns>
    <columns>cgcloud__Due_Date__c</columns>
    <columns>cgcloud__Amount_Open__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>